--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap'); 
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
-body{
+
+body {
   background-color: rgb(236, 76, 138);
 }
 
@@ -21,17 +22,17 @@ body{
   line-height: 1.5em;
 }
 
-.micSettingsIcon{
+.micSettingsIcon {
   position: absolute;
   top: 20px;
   right: 20px;
 }
 
-.icon{
+.icon {
   font-size: 25px;
 }
 
-.mic{
+.mic {
   margin-right: 10px;
 }
 
@@ -50,23 +51,24 @@ body{
   background-color: rgba(236, 76, 137, 0.87);
 }
 
-.arrow-icon{
+.arrow-icon {
   position: absolute;
   top: 10px;
   right: 10px;
 }
 
-.brandName{
-  font-family: 'Gill Sans', sans-serif; 
+.brandName {
+  font-family: 'Gill Sans', sans-serif;
 }
-.productsNumber{
+
+.productsNumber {
   margin-top: 10px;
-  font-family: 'Gill Sans', sans-serif; 
+  font-family: 'Gill Sans', sans-serif;
 }
 
 .detailsContainer {
-  display: grid;
-  grid-template-columns: auto auto;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 img {
@@ -75,6 +77,7 @@ img {
 }
 
 .detailsContents {
+  width: 100%;
   padding: 50px;
   margin: 20px;
 }
@@ -88,20 +91,14 @@ img {
   margin-top: 4px;
 }
 
-.back-icon{
+.back-icon {
   position: absolute;
   left: 20px;
   font-size: 20px;
 }
 
-@media screen and (min-width: 320px) {
-	
-}
-
-@media screen and (min-width: 320px) and (max-width: 786px) {
-	
-}
-
 @media screen and (min-width: 992px) {
-
+  .detailsContents {
+    width: 45%;
+  }
 }
